--- a/wup_3.Rmd
+++ b/wup_3.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Alcohol vs Seat choice"
-author: "Your Name"
-date: "Fall 2020"
+author: "Jasmine Walters"
+date: "Spring 2025"
 output: html_document
 ---
 
